--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,29 +1,43 @@
-name: Push to Docker registry
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
       - main
+  release:
+    types:
+      - created
+  workflow_dispatch:
+
+env:
+  IMAGE_NAME: aoirint/chinachu
+  IMAGE_TAG: ${{ github.event.release.tag_name != '' && github.event.release.tag_name || 'latest' }}
 
 jobs:
-  push:
+  docker-build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
-        uses: actions-hub/docker/login@master
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_REGISTRY_URL: docker.io
+      - name: Setup Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Build :latest
-        if: success()
-        run: docker build -t aoirint/chinachu:latest .
-
-      - name: Deploy :latest
-        if: success()
-        uses: actions-hub/docker@master
+      - name: Login to Docker Registry
+        uses: docker/login-action@v2
         with:
-          args: push aoirint/chinachu:latest
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Deploy Docker image
+        uses: docker/build-push-action@v3
+        env:
+          IMAGE_NAME_AND_TAG: ${{ format('{0}:{1}', env.IMAGE_NAME, env.IMAGE_TAG) }}
+        with:
+          context: .
+          builder: ${{ steps.buildx.outputs.name }}
+          file: ./Dockerfile
+          push: true
+          tags: ${{ env.IMAGE_NAME_AND_TAG }}
+          cache-from: type=registry,ref=${{ env.IMAGE_NAME_AND_TAG }}-buildcache
+          cache-to: type=registry,ref=${{ env.IMAGE_NAME_AND_TAG }}-buildcache,mode=max
